# A2AServer

./: README.md  README_ZH.md
backend/: README.md  README_ZH.md  client.py
backend/A2AServer/: README.md  pyproject.toml
backend/A2AServer/src/: agent.py  tool_parameters_dict.py
backend/A2AServer/src/A2AServer/: agent.py  task_manager.py
backend/A2AServer/src/A2AServer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/A2AServer/src/A2AServer/common/client/: card_resolver.py
backend/A2AServer/src/A2AServer/common/server/: task_manager.py  utils.py
backend/A2AServer/src/A2AServer/mcp_client/: client.py  utils.py
backend/A2AServer/src/A2AServer/mcp_client/providers/: bytedance.py  deepseek.py  ollama.py  vllm.py  zhipu.py
backend/A2AServer/src/common/client/: card_resolver.py  client.py
backend/A2AServer/src/common/server/: server.py
backend/A2AServer/src/mcp_client/: __init__.py  client.py
backend/A2AServer/src/mcp_client/providers/: lmstudio.py
backend/AgentRAG/: .env  README.md  README_ZH.md  main.py  mcp_config.json  prompt.txt
backend/AgentRAG_keyword/: .env  README.md  README_ZH.md  main.py  mcp_config.json  prompt.txt
backend/DeepSearch/: README.md  README_ZH.md  env_template.txt  main.py  mcp_config.json
backend/LNGExpert/: README.md  README_ZH.md  env_template.txt  main.py  mcp_config.json  prompt.txt
docs/: README.md  README_ZH.md
docs/Chinese/: LLM_configuration.md  UI.md  create_new_A2AServer.md
docs/English/: LLM_configuration.md  UI.md
frontend/: README.md  README_ZH.md
frontend/hostAgentAPI/: api.py  (+9 more)
(+32 files in other folders)
